--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title></title>
+		<title>slippyd.com</title>
 		<meta name="viewport" content="user-scalable=yes">
 		<link rel="stylesheet" href="reset.css" type="text/css" media="all" charset="utf-8">
 		<style type="text/css" media="all">
