--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="UTF-8">
 		<title></title>
 		<meta name="viewport" content="user-scalable=yes">
+		<link rel="author" href="https://plus.google.com/+CapnSlipp">
 		<link rel="stylesheet" href="reset.css" type="text/css" media="all" charset="utf-8">
 		<style type="text/css" media="all">
 html, body { height: 100%; }
