--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@ body { background-color: #111; }
 }
 
 #hud {
-	background-color: rgba(31, 31, 31, 0.9);
+	/*background-color: rgba(31, 31, 31, 0.9);
 	box-shadow: 0 0 80px 20px rgba(0, 0, 0, 0.15) inset;
 	border: 0.5px solid rgba(0, 0, 0, 0.25);
 	border-radius: 16px;
 	
-	width: 320px; height: 320px;
+	width: 320px; height: 320px;*/
 	
 	position: relative;
 }
@@ -49,10 +49,30 @@ body { background-color: #111; }
 	
 	position: relative;
 }
+#hud .label em {
+	font: italic bold 28px 'Zapfino', fancy; color: #fff;
+	margin-right: 0.5em;
+}
 
 #hud .horizon > .label { margin-top: -2em; }
 
 #hud .label .line { white-space: nowrap; }
+
+@font-face {
+	font-family: 'socicon';
+	src: url('fonts/socicon-webfont.eot');
+	src: url('fonts/socicon-webfont.eot?#iefix') format('embedded-opentype'),
+		url('fonts/socicon-webfont.woff') format('woff'),
+		url('fonts/socicon-webfont.ttf') format('truetype'),
+		url('fonts/socicon-webfont.svg#sociconregular') format('svg');
+	font-weight: normal;
+	font-style: normal;
+	text-transform: initial;
+}
+
+#hud .social-links a {
+	font-family: 'socicon';
+}
 		</style>
 	</head>
 	<body>
@@ -105,7 +125,10 @@ setInterval(function() { skyline.switchImage(); }, 4000);
 	<div id="hud">
 		<div class="horizon">
 			<div class="label">
-				<nobr class="line">This page has</nobr> <nobr class="line">been intentionally</nobr> <nobr class="line">left blank.</nobr>
+				<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
+				<nobr class="line social-icons">
+					<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
+				</nobr>
 			</div>
 		</div>
 	</div>
