Fix: `.social-links`, not `.social-icons`
* Changed the CSS class used from `.social-icons` to `.social-links`, since that’s what’s declared in the CSS.

--- a/index.html
+++ b/index.html
@@ -126,7 +126,7 @@ setInterval(function() { skyline.switchImage(); }, 4000);
 		<div class="horizon">
 			<div class="label">
 				<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
-				<nobr class="line social-icons">
+				<nobr class="line social-links">
 					<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
 				</nobr>
 			</div>
