White label links
* Modified CSS such that `a` tags under the `#hud .label` are just plain-white.

--- a/index.html
+++ b/index.html
@@ -44,10 +44,14 @@ body { background-color: #111; }
 
 #hud .label {
 	text-align: center;
-	font: bold 32px 'Helvetica Neue', Helvetica, san-serif; color: #fff;
+	font: bold 32px 'Helvetica Neue', Helvetica, san-serif;
 	text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 3px;
 	
 	position: relative;
+}
+#hud .label,
+#hud .label a {
+	color: #fff;
 }
 #hud .label em {
 	font: italic bold 28px 'Zapfino', fancy; color: #fff;
