Non-underlined social links
* Modified `.social-links a` to set the `text-decoration` to `none`.
* Minor: Removed `#hud` from that selector.

--- a/index.html
+++ b/index.html
@@ -76,6 +76,7 @@ body { background-color: #111; }
 
 #hud .social-links a {
 	font-family: 'socicon';
+	text-decoration: none;
 }
 		</style>
 	</head>
