Fix: `.line` on their own lines
* I guess this wasn’t working before: now `.line` elements render on their own lines, as well as making their content non-wrapping.
* Minor: `#hud .label …` scoping removed from the selector.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,10 @@ body { background-color: #111; }
 
 #hud .horizon > .label { margin-top: -2em; }
 
-#hud .label .line { white-space: nowrap; }
+.line {
+	display: block;
+	white-space: nowrap;
+}
 
 @font-face {
 	font-family: 'socicon';
