Social icons made larger (44px)
* Social icon size upped from inherited 32px to 44px.

--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ body { background-color: #111; }
 }
 
 #hud .social-links a {
-	font-family: 'socicon';
+	font: 44px 'socicon';
 	text-decoration: none;
 }
 		</style>
