--- a/index.html
+++ b/index.html
@@ -136,6 +136,37 @@ setInterval(function() { skyline.switchImage(); }, 4000);
 				<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
 				<nobr class="line social-links">
 					<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
+					<a href="http://capnslipp.tumblr.com/" alt="Tumblr">z</a>
+					<a href="https://disqus.com/by/capnslipp/" alt="Disqus">:</a>
+					<a href="https://www.pinterest.com/capnslipp/" alt="Pinterest">d</a>
+					<a href="https://delicious.com/slippyd" alt="Delicious">I</a>
+				</nobr>
+				<nobr class="line social-links">
+					<a href="http://www.last.fm/user/slippyd" alt="Last.fm">q</a>
+					<a href="https://soundcloud.com/capnslipp" alt="SoundCloud">n</a>
+					<a href="https://play.spotify.com/user/slippdouglas" alt="Spotify">o</a>
+					<a href="https://www.youtube.com/user/slippydouglas" alt="YouTube">r</a>
+					<a href="https://vimeo.com/capnslipp" alt="Vimeo">s</a>
+				</nobr>
+				<nobr class="line social-links">
+					<a href="https://foursquare.com/capnslipp" alt="Foursquare">e</a>
+					<a href="http://capnslipp.yelp.com/" alt="Yelp">h</a>
+					<a href="https://en.wikipedia.org/wiki/User:Slippyd" alt="Wikipedia">N</a>
+					<a href="http://steamcommunity.com/id/capnslipp/" alt="Steam">X</a>
+					<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX" alt="Xbox Live">Y</a>
+				</nobr>
+				<nobr class="line social-links">
+					<a href="https://www.linkedin.com/in/capnslipp" alt="LinkedIn">j</a>
+					<a href="https://github.com/capnslipp" alt="GitHub">Q</a>
+					<a href="https://www.behance.net/slippyd" alt="Behance">H</a>
+					<a href="http://stackoverflow.com/users/177525/slipp-d-thompson" alt="Stack Overflow">(</a>
+					<a href="http://www.meetup.com/members/633202/" alt="Meetup">]</a>
+				</nobr>
+				<nobr class="line social-links">
+					<a href="https://instagram.com/capnslipp/" alt="Instagram">x</a>
+					<a href="https://www.flickr.com/photos/slippyd/" alt="Flickr">v</a>
+					<a href="https://vine.co/CapnSlipp" alt="Vine">u</a>
+					<a href="http://slippyd.deviantart.com/" alt="DeviantArt">J</a>
 				</nobr>
 			</div>
 		</div>
