--- a/index.html
+++ b/index.html
@@ -78,8 +78,9 @@ body { background-color: #111; }
 }
 
 #hud .social-links a {
-	font: 44px 'socicon';
+	font: 64px/1.5em 'socicon';
 	text-decoration: none;
+	margin: 0.1em;
 }
 		</style>
 	</head>
