The return of the dark-back `#hud`
* Uncommented the `background-color`, `box-shadow`, & `border` CSS properties of the `#hud` rule.  
	» Leaving the `border-radius`, `width`, & `height` properties commented— we probably won't need these.  I would delete them, but I'm feeling like they could be left in if this were LESS/SCSS, which I convert to soon.
* Adjusted the `.horizon > #hud` rule's `margin-top` to be (approximately) negative-half the layed-out height of the `.label`.
* Removed the `div.horizon` element inside `#hud`.  
	» We're no longer v-centering the content inside, so this is no longer necessary.
	* Removed the `#hud .horizon > .label`— it's not longer used.

--- a/index.html
+++ b/index.html
@@ -19,17 +19,18 @@ body { background-color: #111; }
 }
 
 #hud {
-	/*background-color: rgba(31, 31, 31, 0.9);
+	background-color: rgba(31, 31, 31, 0.9);
 	box-shadow: 0 0 80px 20px rgba(0, 0, 0, 0.15) inset;
 	border: 0.5px solid rgba(0, 0, 0, 0.25);
-	border-radius: 16px;
+	/*border-radius: 16px;*/
 	
-	width: 320px; height: 320px;*/
+	/*width: 320px; height: 320px;*/
 	
 	position: relative;
 }
 .horizon > #hud {
-	margin: 0 auto; margin-top: -160px;
+	margin: 0 auto;
+	margin-top: -288px; /* #label currently lays out with a height of 576px */
 }
 
 #back {
@@ -57,8 +58,6 @@ body { background-color: #111; }
 	font: italic bold 28px 'Zapfino', fancy; color: #fff;
 	margin-right: 0.5em;
 }
-
-#hud .horizon > .label { margin-top: -2em; }
 
 .line {
 	display: block;
@@ -132,44 +131,42 @@ setInterval(function() { skyline.switchImage(); }, 4000);
 
 <div class="horizon">
 	<div id="hud">
-		<div class="horizon">
-			<div class="label">
-				<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
-				<nobr class="line social-links">
-					<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
-					<a href="http://capnslipp.tumblr.com/" alt="Tumblr">z</a>
-					<a href="https://disqus.com/by/capnslipp/" alt="Disqus">:</a>
-					<a href="https://www.pinterest.com/capnslipp/" alt="Pinterest">d</a>
-					<a href="https://delicious.com/slippyd" alt="Delicious">I</a>
-				</nobr>
-				<nobr class="line social-links">
-					<a href="http://www.last.fm/user/slippyd" alt="Last.fm">q</a>
-					<a href="https://soundcloud.com/capnslipp" alt="SoundCloud">n</a>
-					<a href="https://play.spotify.com/user/slippdouglas" alt="Spotify">o</a>
-					<a href="https://www.youtube.com/user/slippydouglas" alt="YouTube">r</a>
-					<a href="https://vimeo.com/capnslipp" alt="Vimeo">s</a>
-				</nobr>
-				<nobr class="line social-links">
-					<a href="https://foursquare.com/capnslipp" alt="Foursquare">e</a>
-					<a href="http://capnslipp.yelp.com/" alt="Yelp">h</a>
-					<a href="https://en.wikipedia.org/wiki/User:Slippyd" alt="Wikipedia">N</a>
-					<a href="http://steamcommunity.com/id/capnslipp/" alt="Steam">X</a>
-					<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX" alt="Xbox Live">Y</a>
-				</nobr>
-				<nobr class="line social-links">
-					<a href="https://www.linkedin.com/in/capnslipp" alt="LinkedIn">j</a>
-					<a href="https://github.com/capnslipp" alt="GitHub">Q</a>
-					<a href="https://www.behance.net/slippyd" alt="Behance">H</a>
-					<a href="http://stackoverflow.com/users/177525/slipp-d-thompson" alt="Stack Overflow">(</a>
-					<a href="http://www.meetup.com/members/633202/" alt="Meetup">]</a>
-				</nobr>
-				<nobr class="line social-links">
-					<a href="https://instagram.com/capnslipp/" alt="Instagram">x</a>
-					<a href="https://www.flickr.com/photos/slippyd/" alt="Flickr">v</a>
-					<a href="https://vine.co/CapnSlipp" alt="Vine">u</a>
-					<a href="http://slippyd.deviantart.com/" alt="DeviantArt">J</a>
-				</nobr>
-			</div>
+		<div class="label">
+			<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
+			<nobr class="line social-links">
+				<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
+				<a href="http://capnslipp.tumblr.com/" alt="Tumblr">z</a>
+				<a href="https://disqus.com/by/capnslipp/" alt="Disqus">:</a>
+				<a href="https://www.pinterest.com/capnslipp/" alt="Pinterest">d</a>
+				<a href="https://delicious.com/slippyd" alt="Delicious">I</a>
+			</nobr>
+			<nobr class="line social-links">
+				<a href="http://www.last.fm/user/slippyd" alt="Last.fm">q</a>
+				<a href="https://soundcloud.com/capnslipp" alt="SoundCloud">n</a>
+				<a href="https://play.spotify.com/user/slippdouglas" alt="Spotify">o</a>
+				<a href="https://www.youtube.com/user/slippydouglas" alt="YouTube">r</a>
+				<a href="https://vimeo.com/capnslipp" alt="Vimeo">s</a>
+			</nobr>
+			<nobr class="line social-links">
+				<a href="https://foursquare.com/capnslipp" alt="Foursquare">e</a>
+				<a href="http://capnslipp.yelp.com/" alt="Yelp">h</a>
+				<a href="https://en.wikipedia.org/wiki/User:Slippyd" alt="Wikipedia">N</a>
+				<a href="http://steamcommunity.com/id/capnslipp/" alt="Steam">X</a>
+				<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX" alt="Xbox Live">Y</a>
+			</nobr>
+			<nobr class="line social-links">
+				<a href="https://www.linkedin.com/in/capnslipp" alt="LinkedIn">j</a>
+				<a href="https://github.com/capnslipp" alt="GitHub">Q</a>
+				<a href="https://www.behance.net/slippyd" alt="Behance">H</a>
+				<a href="http://stackoverflow.com/users/177525/slipp-d-thompson" alt="Stack Overflow">(</a>
+				<a href="http://www.meetup.com/members/633202/" alt="Meetup">]</a>
+			</nobr>
+			<nobr class="line social-links">
+				<a href="https://instagram.com/capnslipp/" alt="Instagram">x</a>
+				<a href="https://www.flickr.com/photos/slippyd/" alt="Flickr">v</a>
+				<a href="https://vine.co/CapnSlipp" alt="Vine">u</a>
+				<a href="http://slippyd.deviantart.com/" alt="DeviantArt">J</a>
+			</nobr>
 		</div>
 	</div>
 </div>
