--- a/index.html
+++ b/index.html
@@ -43,9 +43,19 @@ body { background-color: #111; }
 	width: 100%;
 }
 
+@font-face {
+	font-family: 'Chunk Five';
+	src: url('fonts/Chunkfive-webfont.eot');
+	src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
+		url('fonts/Chunkfive-webfont.woff2') format('woff2'),
+		url('fonts/Chunkfive-webfont.woff') format('woff'),
+		url('fonts/Chunkfive-webfont.ttf') format('truetype'),
+		url('fonts/Chunkfive-webfont.svg#unknown') format('svg');
+	font-weight: bold; font-style: normal;
+}
 #hud .label {
 	text-align: center;
-	font: bold 32px 'Helvetica Neue', Helvetica, san-serif;
+	font: 52px 'Chunk Five', 'Helvetica Neue', Helvetica, san-serif;
 	text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 3px;
 	
 	position: relative;
@@ -54,9 +64,21 @@ body { background-color: #111; }
 #hud .label a {
 	color: #fff;
 }
+@font-face {
+	font-family: 'LeagueScriptNumberOne';
+	src: url('fonts/LeagueScriptNumberOne-webfont.eot');
+	src: url('fonts/LeagueScriptNumberOne-webfont.eot?#iefix') format('embedded-opentype'),
+		url('fonts/LeagueScriptNumberOne-webfont.woff') format('woff'),
+		url('fonts/LeagueScriptNumberOne-webfont.ttf') format('truetype'),
+		url('fonts/LeagueScriptNumberOne-webfont.svg') format('svg');
+	font-weight: normal; font-style: normal;
+}
 #hud .label em {
-	font: italic bold 28px 'Zapfino', fancy; color: #fff;
-	margin-right: 0.5em;
+	display: inline-block; /* req'd by transform: */
+	font: 52px 'LeagueScriptNumberOne', fancy; color: #fff;
+	transform: rotate(-1deg);
+	text-transform: none;
+	margin-right: 0.0em;
 }
 
 .line {
