Superminor: `@font-face` Socicon capitalization
* Renamed in the CSS `socicon` to `Socicon`.  Affected:  
	⁃ the `@font-face`'s `font-family`  
	⁃ `#hud .social-links a`'s `font:`

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@ body { background-color: #111; }
 }
 
 @font-face {
-	font-family: 'socicon';
+	font-family: 'Socicon';
 	src: url('fonts/socicon-webfont.eot');
 	src: url('fonts/socicon-webfont.eot?#iefix') format('embedded-opentype'),
 		url('fonts/socicon-webfont.woff') format('woff'),
@@ -99,7 +99,7 @@ body { background-color: #111; }
 }
 
 #hud .social-links a {
-	font: 64px/1.5em 'socicon';
+	font: 48px/1.5em 'Socicon';
 	text-decoration: none;
 	margin: 0.1em;
 }
