--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@ body { background-color: #111; }
 	text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 3px;
 	
 	position: relative;
+	
+	margin: 40px 0;
 }
 @font-face {
 	font-family: 'LeagueScriptNumberOne';
@@ -98,6 +100,10 @@ body { background-color: #111; }
 	font-weight: normal;
 	font-style: normal;
 	text-transform: initial;
+}
+
+#hud .social-links {
+	margin: 20px 0;
 }
 
 #hud .social-links a {
