--- a/index.html
+++ b/index.html
@@ -25,8 +25,10 @@ body { background-color: #111; }
 	/*border-radius: 16px;*/
 	
 	/*width: 320px; height: 320px;*/
+	width: 100%;
 	
 	position: relative;
+	display: inline-block; /* border-uncollapse */
 }
 .horizon > #hud {
 	margin: 0 auto;
