--- a/index.html
+++ b/index.html
@@ -3,12 +3,16 @@
 	<head>
 		<meta charset="UTF-8">
 		<title>slippyd.com</title>
-		<meta name="viewport" content="user-scalable=yes">
+		<meta name="viewport" content="width=960px, user-scalable=yes">
 		<link rel="author" href="https://plus.google.com/+CapnSlipp">
 		<link rel="stylesheet" href="reset.css" type="text/css" media="all" charset="utf-8">
 		<style type="text/css" media="all">
 html, body { height: 100%; }
-body { margin: 0; padding: 0; overflow-x: hidden; }
+body {
+	margin: 0; padding: 0;
+	position: relative;
+	min-width: 960px;
+}
 
 body { background-color: #111; }
 
