Updated Behance URL

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@ skyline.flickerRepeatedly();
 			<nobr class="line">
 				<a href="https://www.linkedin.com/in/capnslipp" alt="LinkedIn">j</a>
 				<a href="https://github.com/capnslipp" alt="GitHub">Q</a>
-				<a href="https://www.behance.net/slippyd" alt="Behance">H</a>
+				<a href="https://www.behance.net/capnslipp" alt="Behance">H</a>
 				<a href="http://stackoverflow.com/users/177525/slipp-d-thompson" alt="Stack Overflow">(</a>
 				<a href="http://www.meetup.com/members/633202/" alt="Meetup">]</a>
 			</nobr>
