--- a/index.html
+++ b/index.html
@@ -244,6 +244,7 @@ skyline.flickerRepeatedly();
 		</div>
 		<div class="social-links">
 			<nobr class="line">
+				<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d" alt="E-mail">@</a>
 				<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
 				<a href="http://capnslipp.tumblr.com/" alt="Tumblr">z</a>
 				<a href="https://disqus.com/by/capnslipp/" alt="Disqus">:</a>
