Added “Cap’n” SVG from v10
* Added `capn.svg`, derived from concepts for the v.10 slippyd.com.
	* Also added `capn.svgz`, but it doesn’t work “error on line 1 at column 1: Encoding error”.  I guess I’ll figure it out later.
* Replaced `<em>Cap'n</em>` text with an `<img>` for the `capn.svg`.  Gave it id `#capn` and styled it to size-down by 75% and margin-shift downward 40px.

--- a/index.html
+++ b/index.html
@@ -139,6 +139,12 @@ body { background-color: #111; }
 	text-decoration: none;
 	margin: 0.1em;
 }
+
+#capn {
+	width: 133.5px;
+	height: 92.625px;
+	margin: 40px 0 -40px;
+}
 		</style>
 	</head>
 	<body>
@@ -240,7 +246,10 @@ skyline.flickerRepeatedly();
 <div class="horizon">
 	<div id="hud">
 		<div class="label">
-			<nobr class="line"><em>Cap'n</em> Slipp Douglas Thompson</nobr>
+			<nobr class="line">
+				<em><img id="capn" src="capn.svg" alt="Cap'n" width="178" height="123.5"/></em>
+				Slipp Douglas Thompson
+			</nobr>
 		</div>
 		<div class="social-links">
 			<nobr class="line">
