--- a/index.html
+++ b/index.html
@@ -80,16 +80,18 @@ body { background-color: #111; }
 }
 
 @font-face {
-	font-family: 'Chunk Five';
-	src: url('fonts/Chunkfive-webfont.eot');
-	src: url('fonts/Chunkfive-webfont.eot?#iefix') format('embedded-opentype'),
-		url('fonts/Chunkfive-webfont.woff') format('woff'),
-		url('fonts/Chunkfive-webfont.ttf') format('truetype'),
-		url('fonts/Chunkfive-webfont.svg#unknown') format('svg');
-	font-weight: bold; font-style: normal;
+	font-family: 'League Spartan';
+	src: url('LeagueSpartan-Bold.eot');
+	src: url('LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
+		url('LeagueSpartan-Bold.woff2') format('woff2'),
+		url('LeagueSpartan-Bold.woff') format('woff'),
+		url('LeagueSpartan-Bold.ttf') format('truetype'),
+		url('LeagueSpartan-Bold.svg#league_spartanbold') format('svg');
+	font-weight: bold;
+	font-style: normal;
 }
 #hud .label {
-	font: 52px 'Chunk Five', 'Helvetica Neue', Helvetica, san-serif;
+	font: 72px 'League Spartan', 'Helvetica Neue', Helvetica, san-serif;
 	text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 3px;
 	
 	position: relative;
@@ -143,7 +145,7 @@ body { background-color: #111; }
 #capn {
 	width: 133.5px;
 	height: 92.625px;
-	margin: 40px 0 -40px;
+	margin: 30px 0 -30px;
 }
 		</style>
 	</head>
