--- a/index.html
+++ b/index.html
@@ -63,10 +63,14 @@ body { background-color: #111; }
 	position: absolute; z-index: 0;
 	top: 0; bottom: 0; left: 0; right: 0;
 	overflow: hidden;
+	
+	background-image: url('skyline.hq.bottom-4px.jpeg');
+	background-size: 100% auto;
+	background-repeat: repeat-y;
 }
 
 #back > img {
-	width: 100%; height: 100%;
+	width: 100%; height: auto;
 }
 
 #hud .label,
