--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@ body { background-color: #111; }
 
 @font-face {
 	font-family: 'League Spartan';
-	src: url('LeagueSpartan-Bold.eot');
-	src: url('LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
-		url('LeagueSpartan-Bold.woff2') format('woff2'),
-		url('LeagueSpartan-Bold.woff') format('woff'),
-		url('LeagueSpartan-Bold.ttf') format('truetype'),
-		url('LeagueSpartan-Bold.svg#league_spartanbold') format('svg');
+	src: url('fonts/LeagueSpartan-Bold.eot');
+	src: url('fonts/LeagueSpartan-Bold.eot?#iefix') format('embedded-opentype'),
+		url('fonts/LeagueSpartan-Bold.woff2') format('woff2'),
+		url('fonts/LeagueSpartan-Bold.woff') format('woff'),
+		url('fonts/LeagueSpartan-Bold.ttf') format('truetype'),
+		url('fonts/LeagueSpartan-Bold.svg#league_spartanbold') format('svg');
 	font-weight: bold;
 	font-style: normal;
 }
