--- a/index.html
+++ b/index.html
@@ -138,6 +138,7 @@ body { background-color: #111; }
 #hud .social-links a {
 	font: 48px/1.5em 'Socicon';
 	text-decoration: none;
+	text-shadow: rgba(0, 0, 0, 0.15) 0px 1.5px 1.5px;
 	margin: 0.1em;
 }
 
