Made `#capn`’s margin-shift bottom-only
* Turned `#capn`’s top/bottom margins into just a `margin-bottom`, since the extra space on the top was pushing the whole layout downwards.  
	‣ I had been noticing that everything looks lower-than-center that it should have been.  Everything looks more balanced now.

--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@ body { background-color: #111; }
 #capn {
 	width: 160.2px;
 	height: 111.15px;
-	margin: 52px 0 -52px;
+	margin-bottom: -52px;
 }
 		</style>
 	</head>
