--- a/index.html
+++ b/index.html
@@ -133,16 +133,25 @@ body { background-color: #111; }
 	text-transform: initial;
 }
 
-#hud .social-links {
-	margin: 20px 0;
+nav.social-links li a {
+	text-decoration: none;
 }
 
-#hud .social-links a {
+nav.social-links { display: table; }
+nav.social-links .column { display: table-cell; }
+
+#hud nav.social-links {
+	margin: 20px auto;
+	padding-left: 20px; padding-right: 50px;
+	width: 70em;
+}
+
+.social-links i {
 	font: 48px/1.5em 'Socicon';
-	text-decoration: none;
 	text-shadow: rgba(0, 0, 0, 0.15) 0px 1.5px 1.5px;
 	margin: 0.1em;
 }
+.social-links i a { text-decoration: none; }
 
 #capn {
 	width: 160.2px;
@@ -256,45 +265,155 @@ skyline.flickerRepeatedly();
 			</nobr>
 			<div class="divider"><div class="fill"></div></div>
 		</div>
-		<div class="social-links">
-			<nobr class="line">
-				<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d" alt="E-mail">@</a>
-				<a href="https://twitter.com/capnslipp" alt="Twitter">a</a>
-				<a href="http://capnslipp.tumblr.com/" alt="Tumblr">z</a>
-				<a href="https://disqus.com/by/capnslipp/" alt="Disqus">:</a>
-				<a href="https://www.pinterest.com/capnslipp/" alt="Pinterest">d</a>
-				<a href="https://delicious.com/slippyd" alt="Delicious">I</a>
-			</nobr>
-			<nobr class="line">
-				<a href="http://www.last.fm/user/slippyd" alt="Last.fm">q</a>
-				<a href="https://soundcloud.com/capnslipp" alt="SoundCloud">n</a>
-				<a href="https://play.spotify.com/user/slippdouglas" alt="Spotify">o</a>
-				<a href="https://www.youtube.com/user/slippydouglas" alt="YouTube">r</a>
-				<a href="https://vimeo.com/capnslipp" alt="Vimeo">s</a>
-			</nobr>
-			<nobr class="line">
-				<a href="https://foursquare.com/capnslipp" alt="Foursquare">e</a>
-				<a href="http://capnslipp.yelp.com/" alt="Yelp">h</a>
-				<a href="https://en.wikipedia.org/wiki/User:Slippyd" alt="Wikipedia">N</a>
-				<a href="http://steamcommunity.com/id/capnslipp/" alt="Steam">X</a>
-				<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX" alt="Xbox Live">Y</a>
-			</nobr>
-			<nobr class="line">
-				<a href="https://www.linkedin.com/in/capnslipp" alt="LinkedIn">j</a>
-				<a href="https://github.com/capnslipp" alt="GitHub">Q</a>
-				<a href="https://www.behance.net/capnslipp" alt="Behance">H</a>
-				<a href="http://stackoverflow.com/users/177525/slipp-d-thompson" alt="Stack Overflow">(</a>
-				<a href="http://www.meetup.com/members/633202/" alt="Meetup">]</a>
-			</nobr>
-			<nobr class="line">
-				<a href="https://instagram.com/capnslipp/" alt="Instagram">x</a>
-				<a href="https://www.flickr.com/photos/slippyd/" alt="Flickr">v</a>
-				<a href="https://vine.co/CapnSlipp" alt="Vine">u</a>
-				<a href="http://slippyd.deviantart.com/" alt="DeviantArt">J</a>
-			</nobr>
-		</div>
-	</div>
-</div>
+		<nav class="social-links">
+			<div class="column">
+				<ul>
+					<li>
+						<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d">
+							<i>@</i><span class="label">E-mail</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://twitter.com/capnslipp">
+							<i>a</i><span class="label">Twitter</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://capnslipp.tumblr.com/">
+							<i>z</i><span class="label">Tumblr</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://disqus.com/by/capnslipp/">
+							<i>:</i><span class="label">Disqus</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.pinterest.com/capnslipp/">
+							<i>d</i><span class="label">Pinterest</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://delicious.com/slippyd">
+							<i>I</i><span class="label">Delicious</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<a href="http://www.last.fm/user/slippyd">
+							<i>q</i><span class="label">Last.fm</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://soundcloud.com/capnslipp">
+							<i>n</i><span class="label">SoundCloud</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://play.spotify.com/user/slippdouglas">
+							<i>o</i><span class="label">Spotify</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.youtube.com/user/slippydouglas">
+							<i>r</i><span class="label">YouTube</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://vimeo.com/capnslipp">
+							<i>s</i><span class="label">Vimeo</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<a href="https://foursquare.com/capnslipp">
+							<i>e</i><span class="label">Foursquare</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://capnslipp.yelp.com/">
+							<i>h</i><span class="label">Yelp</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://en.wikipedia.org/wiki/User:Slippyd">
+							<i>N</i><span class="label">Wikipedia</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://steamcommunity.com/id/capnslipp/">
+							<i>X</i><span class="label">Steam</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX">
+							<i>Y</i><span class="label">Xbox Live</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<a href="https://www.linkedin.com/in/capnslipp">
+							<i>j</i><span class="label">LinkedIn</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://github.com/capnslipp">
+							<i>Q</i><span class="label">GitHub</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.behance.net/capnslipp">
+							<i>H</i><span class="label">Behance</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://stackoverflow.com/users/177525/slipp-d-thompson">
+							<i>(</i><span class="label">Stack Overflow</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://www.meetup.com/members/633202/">
+							<i>]</i><span class="label">Meetup</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+			<div class="column">
+				<ul>
+					<li>
+						<a href="https://instagram.com/capnslipp/">
+							<i>x</i><span class="label">Instagram</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://www.flickr.com/photos/slippyd/">
+							<i>v</i><span class="label">Flickr</span>
+						</a>
+					</li>
+					<li>
+						<a href="https://vine.co/CapnSlipp">
+							<i>u</i><span class="label">Vine</span>
+						</a>
+					</li>
+					<li>
+						<a href="http://slippyd.deviantart.com/">
+							<i>J</i><span class="label">DeviantArt</span>
+						</a>
+					</li>
+				</ul>
+			</div>
+		</nav>
+	</div><!-- #hud -->
+</div><!-- .horizon -->
 
 
 		<script type="text/javascript">
