--- a/index.html
+++ b/index.html
@@ -125,6 +125,12 @@ body { background-color: #111; }
 #hud .label > .divider {
 	margin-top: 12px;
 }
+#hud .column > .divider {
+	margin: 18px 0;
+}
+#hud .column > .divider > .fill {
+	left: -5px; right: -5px;
+}
 
 @font-face {
 	font-family: 'Socicon';
@@ -146,7 +152,7 @@ nav.social-links { display: table; }
 nav.social-links .column { display: table-cell; }
 
 #hud nav.social-links {
-	margin: 20px auto;
+	margin: 0px auto;
 	padding-left: 20px; padding-right: 50px;
 	width: 70em;
 }
@@ -268,6 +274,7 @@ skyline.flickerRepeatedly();
 		
 		<nav class="social-links">
 			<div class="column">
+				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
 						<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d">
@@ -300,8 +307,10 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 				</ul>
+				<div class="divider"><div class="fill"></div></div>
 			</div>
 			<div class="column">
+				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
 						<a href="http://www.last.fm/user/slippyd">
@@ -329,8 +338,10 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 				</ul>
+				<div class="divider"><div class="fill"></div></div>
 			</div>
 			<div class="column">
+				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
 						<a href="https://foursquare.com/capnslipp">
@@ -358,8 +369,10 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 				</ul>
+				<div class="divider"><div class="fill"></div></div>
 			</div>
 			<div class="column">
+				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
 						<a href="https://www.linkedin.com/in/capnslipp">
@@ -387,8 +400,10 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 				</ul>
+				<div class="divider"><div class="fill"></div></div>
 			</div>
 			<div class="column">
+				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
 						<a href="https://instagram.com/capnslipp/">
@@ -411,6 +426,7 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 				</ul>
+				<div class="divider"><div class="fill"></div></div>
 			</div>
 		</nav>
 		
