Using `h1` for title line instead of `.label`
* Changed `#hud > div.label` element to `#hud > h1`.  Changed CSS selector from `#hud .label` to `#hud h1`

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ body { background-color: #111; }
 	font-weight: bold;
 	font-style: normal;
 }
-#hud .label {
+#hud h1 {
 	font: 72px 'League Spartan', 'Helvetica Neue', Helvetica, san-serif;
 	text-shadow: rgba(0, 0, 0, 0.25) 0px 3px 3px;
 	
@@ -258,13 +258,13 @@ skyline.flickerRepeatedly();
 
 <div class="horizon">
 	<div id="hud">
-		<div class="label">
+		<h1>
 			<nobr class="line">
 				<img id="capn" src="capn.svg" alt="Cap'n" width="178" height="123.5"/>
 				Slipp Douglas Thompson
 			</nobr>
 			<div class="divider"><div class="fill"></div></div>
-		</div>
+		</h1>
 		<nav class="social-links">
 			<div class="column">
 				<ul>
