`#capn`→`#capn-graphic`, & reorg
* Moved `#capn` CSS rule up to the other `h1` stuff.
* Renamed `#capn`→`#capn-graphic`.
* Split `margin-bottom` into separate `#hud h1 #capn-graphic` rule.

--- a/index.html
+++ b/index.html
@@ -99,6 +99,11 @@ body { background-color: #111; }
 	
 	margin: 40px 0;
 }
+#capn-graphic {
+	width: 160.2px;
+	height: 111.15px;
+}
+#hud h1 #capn-graphic { margin-bottom: -52px; }
 
 .line {
 	display: block;
@@ -152,12 +157,6 @@ nav.social-links .column { display: table-cell; }
 	margin: 0.1em;
 }
 .social-links i a { text-decoration: none; }
-
-#capn {
-	width: 160.2px;
-	height: 111.15px;
-	margin-bottom: -52px;
-}
 		</style>
 	</head>
 	<body>
@@ -261,7 +260,7 @@ skyline.flickerRepeatedly();
 		
 		<h1>
 			<nobr class="line">
-				<img id="capn" src="capn.svg" alt="Cap'n" width="178" height="123.5"/>
+				<img id="capn-graphic" src="capn.svg" alt="Cap'n" width="178" height="123.5"/>
 				Slipp Douglas Thompson
 			</nobr>
 			<div class="divider"><div class="fill"></div></div>
