--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@ body { background-color: #111; }
 
 #hud .divider {
 	position: relative;
-	width: 100%; height: 2px;
+	width: 100%; height: 1.5px;
 }
 #hud .divider > .fill {
 	position: absolute;
@@ -134,8 +134,9 @@ body { background-color: #111; }
 	background-color: #fff;
 	box-shadow: 2px 2px 3px 0px rgba(0, 0, 0, 0.15);
 }
-#hud .label > .divider {
-	margin-top: 12px;
+#hud h1 > .divider {
+	/*margin-top: 12px;*/
+	height: 3px;
 }
 #hud .column > .divider {
 	margin: 18px 0;
