--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@ body { background-color: #111; }
 
 #hud {
 	background-color: rgba(31, 31, 31, 0.9);
+	backdrop-filter: blur(50px);
 	box-shadow: 0 0 80px 20px rgba(0, 0, 0, 0.15) inset;
 	border: 0.5px solid rgba(0, 0, 0, 0.25);
 	border-radius: 16px;
