Hid column divider lines— decided I hate them

--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@ body { background-color: #111; }
 }
 #hud .column > .divider {
 	margin: 18px 0;
+	display: none;
 }
 #hud .column > .divider > .fill {
 	left: -5px; right: -5px;
