--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ skyline.flickerRepeatedly();
 			<div class="column">
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
-					<li>
+					<li style="display: none;">
 						<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d">
 							<i>@</i><span class="label">E-mail</span>
 						</a>
