Hid social link label text, and made the table narrower (columns closer)

--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ nav.social-links .column { display: table-cell; }
 #hud nav.social-links {
 	margin: 0px auto;
 	padding-left: 20px; padding-right: 50px;
-	width: 70em;
+	width: 45em;
 }
 
 .social-links i {
@@ -177,6 +177,7 @@ nav.social-links .column { display: table-cell; }
 	margin: 0.1em;
 }
 .social-links i a { text-decoration: none; }
+.social-links .label { display: none; }
 		</style>
 	</head>
 	<body>
