Added <a> titles (hover-over text) for each link

--- a/index.html
+++ b/index.html
@@ -296,32 +296,32 @@ skyline.flickerRepeatedly();
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li style="display: none;">
-						<a href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d">
+						<a title="E-mail" href="&#x6d;&#97;&#x69;&#108;&#x74;&#x6F;:&#37;63a&#x25;7&#48;&#x25;&#x36;es%&#54;C&#x25;&#54;9p&#37;&#x37;&#x30;&#46;1&#37;&#52;&#x30;&#x25;&#55;&#x33;&#37;&#54;ci&#x25;7&#48;%70y&#x25;&#x36;4&#x25;2&#101;&#37;63o&#x25;&#x36;d">
 							<i>@</i><span class="label">E-mail</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://twitter.com/capnslipp">
+						<a title="Twitter" href="https://twitter.com/capnslipp">
 							<i>a</i><span class="label">Twitter</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://capnslipp.tumblr.com/">
+						<a title="Tumblr" href="http://capnslipp.tumblr.com/">
 							<i>z</i><span class="label">Tumblr</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://disqus.com/by/capnslipp/">
+						<a title="Disqus" href="https://disqus.com/by/capnslipp/">
 							<i>:</i><span class="label">Disqus</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.pinterest.com/capnslipp/">
+						<a title="Pinterest" href="https://www.pinterest.com/capnslipp/">
 							<i>d</i><span class="label">Pinterest</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://delicious.com/slippyd">
+						<a title="Delicious" href="https://delicious.com/slippyd">
 							<i>I</i><span class="label">Delicious</span>
 						</a>
 					</li>
@@ -332,27 +332,27 @@ skyline.flickerRepeatedly();
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
-						<a href="http://www.last.fm/user/slippyd">
+						<a title="Last.fm" href="http://www.last.fm/user/slippyd">
 							<i>q</i><span class="label">Last.fm</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://soundcloud.com/capnslipp">
+						<a title="SoundCloud" href="https://soundcloud.com/capnslipp">
 							<i>n</i><span class="label">SoundCloud</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://play.spotify.com/user/slippdouglas">
+						<a title="Spotify" href="https://play.spotify.com/user/slippdouglas">
 							<i>o</i><span class="label">Spotify</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.youtube.com/user/slippydouglas">
+						<a title="YouTube" href="https://www.youtube.com/user/slippydouglas">
 							<i>r</i><span class="label">YouTube</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://vimeo.com/capnslipp">
+						<a title="Vimeo" href="https://vimeo.com/capnslipp">
 							<i>s</i><span class="label">Vimeo</span>
 						</a>
 					</li>
@@ -363,27 +363,27 @@ skyline.flickerRepeatedly();
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
-						<a href="https://foursquare.com/capnslipp">
+						<a title="Foursquare" href="https://foursquare.com/capnslipp">
 							<i>e</i><span class="label">Foursquare</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://capnslipp.yelp.com/">
+						<a title="Yelp" href="http://capnslipp.yelp.com/">
 							<i>h</i><span class="label">Yelp</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://en.wikipedia.org/wiki/User:Slippyd">
+						<a title="Wikipedia" href="https://en.wikipedia.org/wiki/User:Slippyd">
 							<i>N</i><span class="label">Wikipedia</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://steamcommunity.com/id/capnslipp/">
+						<a title="Steam" href="http://steamcommunity.com/id/capnslipp/">
 							<i>X</i><span class="label">Steam</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX">
+						<a title="Xbox Live" href="https://account.xbox.com/en-US/Profile?gamerTag=SlippyDX">
 							<i>Y</i><span class="label">Xbox Live</span>
 						</a>
 					</li>
@@ -394,27 +394,27 @@ skyline.flickerRepeatedly();
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
-						<a href="https://www.linkedin.com/in/capnslipp">
+						<a title="LinkedIn" href="https://www.linkedin.com/in/capnslipp">
 							<i>j</i><span class="label">LinkedIn</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://github.com/capnslipp">
+						<a title="GitHub" href="https://github.com/capnslipp">
 							<i>Q</i><span class="label">GitHub</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.behance.net/capnslipp">
+						<a title="Behance" href="https://www.behance.net/capnslipp">
 							<i>H</i><span class="label">Behance</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://stackoverflow.com/users/177525/slipp-d-thompson">
+						<a title="Stack Overflow" href="http://stackoverflow.com/users/177525/slipp-d-thompson">
 							<i>(</i><span class="label">Stack Overflow</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://www.meetup.com/members/633202/">
+						<a title="Meetup" href="http://www.meetup.com/members/633202/">
 							<i>]</i><span class="label">Meetup</span>
 						</a>
 					</li>
@@ -425,22 +425,22 @@ skyline.flickerRepeatedly();
 				<div class="divider"><div class="fill"></div></div>
 				<ul>
 					<li>
-						<a href="https://instagram.com/capnslipp/">
+						<a title="Instagram" href="https://instagram.com/capnslipp/">
 							<i>x</i><span class="label">Instagram</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://www.flickr.com/photos/slippyd/">
+						<a title="Flickr" href="https://www.flickr.com/photos/slippyd/">
 							<i>v</i><span class="label">Flickr</span>
 						</a>
 					</li>
 					<li>
-						<a href="https://vine.co/CapnSlipp">
+						<a title="Vine" href="https://vine.co/CapnSlipp">
 							<i>u</i><span class="label">Vine</span>
 						</a>
 					</li>
 					<li>
-						<a href="http://slippyd.deviantart.com/">
+						<a title="DeviantArt" href="http://slippyd.deviantart.com/">
 							<i>J</i><span class="label">DeviantArt</span>
 						</a>
 					</li>
