Hid Delicious link— Delicious no longer exists

--- a/index.html
+++ b/index.html
@@ -320,7 +320,7 @@ skyline.flickerRepeatedly();
 							<i>d</i><span class="label">Pinterest</span>
 						</a>
 					</li>
-					<li>
+					<li style="display: none;">
 						<a title="Delicious" href="https://delicious.com/slippyd">
 							<i>I</i><span class="label">Delicious</span>
 						</a>
