Hid Vine link— Vine is dead & gone

--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@ skyline.flickerRepeatedly();
 							<i>v</i><span class="label">Flickr</span>
 						</a>
 					</li>
-					<li>
+					<li style="display: none;">
 						<a title="Vine" href="https://vine.co/CapnSlipp">
 							<i>u</i><span class="label">Vine</span>
 						</a>
