Updated title to “capnslipp.com”

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html>
 	<head>
 		<meta charset="UTF-8">
-		<title>slippyd.com</title>
+		<title>capnslipp.com</title>
 		<meta name="viewport" content="width=960px, user-scalable=yes">
 		<link rel="author" href="https://plus.google.com/+CapnSlipp">
 		<style type="text/css" media="all">
