Updated Google Analytics to use capnslipp.com
Not sure if this'll work, since they might be different properties, but IDC.

--- a/index.html
+++ b/index.html
@@ -456,7 +456,7 @@ skyline.flickerRepeatedly();
 		<script type="text/javascript">
 var _gaq = _gaq || [];
 _gaq.push(['_setAccount', 'UA-2082144-1']);
-_gaq.push(['_setDomainName', 'slippyd.com']);
+_gaq.push(['_setDomainName', 'capnslipp.com']);
 _gaq.push(['_trackPageview']);
 
 (function() {
