Got rid of horizon and made the #hud a fix (vw) height from top
A workaround for #back not stretching full-height… which I should figure out, but I don't feel like re-learning CSS today.  This should look Good Enough™ on most screens.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,9 @@ body { background-color: #111; }
 	position: relative;
 	display: inline-block; /* border-uncollapse */
 }
+#hud {
+	margin-top: 9vw;
+}
 .horizon > #hud {
 	margin: 0 auto;
 	margin-top: -288px; /* #label currently lays out with a height of 576px */
@@ -276,7 +279,7 @@ skyline.flickerRepeatedly();
 	</script>
 </div>
 
-<div class="horizon">
+<!--div class="horizon"-->
 	<div id="hud">
 		
 		<h1>
@@ -450,7 +453,7 @@ skyline.flickerRepeatedly();
 		</nav>
 		
 	</div><!-- #hud -->
-</div><!-- .horizon -->
+<!--/div--><!-- .horizon -->
 
 
 		<script type="text/javascript">
