--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ input,button,textarea,select,optgroup,option{font-family:inherit;font-size:inher
 input,button,textarea,select{*font-size:100%;}
 		</style>
 		<style type="text/css" media="all">
-html, body { height: 100%; }
+body { min-height: 100vh; }
 body {
 	margin: 0; padding: 0;
 	position: relative;
