Scooted title line up a bit, added a bit more space below it

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ body { background-color: #111; }
 	display: inline-block; /* border-uncollapse */
 }
 #hud {
-	margin-top: 9vw;
+	margin-top: 5vw;
 	margin-bottom: 3vw;
 }
 .horizon > #hud {
@@ -101,7 +101,7 @@ body { background-color: #111; }
 	position: relative;
 	display: inline-block;
 	
-	margin: 40px 0;
+	margin: 40px 0 80px;
 }
 #capn-graphic,
 #slipp-graphic,
