Replaced Twitter logo & label with “𝕏”
* Replaced Twitter logo with “𝕏” unicode mathematical symbol (which supposedly isn't exactly the same as the logo, but who cares), and tweaked CSS so it lines up with the socicons font symbols.
* Replaced “Twitter” text with “X (formerly known as Twitter)”.

--- a/index.html
+++ b/index.html
@@ -176,11 +176,19 @@ nav.social-links .column { display: table-cell; }
 }
 
 .social-links i {
-	font: 48px/1.5em 'Socicon';
+	font: 48px 'Socicon';
+}
+.social-links .x {
+	font: 72px san-serif;
+	position: relative; top: 6px;
+}
+.social-links i, .social-links .x {
+	line-height: 72px;
 	text-shadow: rgba(0, 0, 0, 0.15) 0px 1.5px 1.5px;
 	margin: 0.1em;
+	vertical-align: bottom;
 }
-.social-links i a { text-decoration: none; }
+.social-links i a, .social-links b a, { text-decoration: none; }
 .social-links .label { display: none; }
 		</style>
 	</head>
@@ -305,8 +313,8 @@ skyline.flickerRepeatedly();
 						</a>
 					</li>
 					<li>
-						<a title="Twitter" href="https://twitter.com/capnslipp">
-							<i>a</i><span class="label">Twitter</span>
+						<a title="X (formerly known as Twitter)" href="https://x.com/capnslipp">
+							<span class="x">𝕏</span><span class="label">X (formerly known as Twitter)</span>
 						</a>
 					</li>
 					<li>
